tests/snapshots/python_test__project_with_scripts_mermaid.snap
---
source: tests/python_test.rs
expression: mermaid_output
---
flowchart TD
    scripts_blah["scripts.blah"] --> foo_bar("foo.bar")
    scripts_runner["scripts.runner"] --> foo_bar("foo.bar")
    scripts_runner["scripts.runner"] --> scripts_utils_helper["scripts.utils.helper"]
