tests/snapshots/python_test__sample_python_project_cytoscape_output.snap
---
source: tests/python_test.rs
expression: cytoscape_output
---
<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Dependency Graph - Cytoscape.js</title>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.33.1/cytoscape.min.js"></script>
    <script src="https://unpkg.com/dagre@0.8.5/dist/dagre.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/cytoscape-dagre@2.5.0/cytoscape-dagre.min.js"></script>
    <style>
        body {
            margin: 0;
            padding: 0;
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
            display: flex;
            flex-direction: column;
            height: 100vh;
        }

        #controls {
            background: #f5f5f5;
            padding: 12px;
            border-bottom: 1px solid #ddd;
            display: flex;
            gap: 10px;
            align-items: center;
            flex-wrap: wrap;
        }

        button {
            padding: 8px 16px;
            background: white;
            border: 1px solid #ccc;
            border-radius: 4px;
            cursor: pointer;
            font-size: 14px;
        }

        button:hover {
            background: #e9e9e9;
        }

        button:active {
            background: #d9d9d9;
        }

        #info {
            font-size: 14px;
            color: #666;
            margin-left: auto;
        }

        #cy {
            flex: 1;
            background: #ffffff;
        }

        .legend {
            position: absolute;
            bottom: 20px;
            right: 20px;
            background: white;
            padding: 15px;
            border-radius: 8px;
            box-shadow: 0 2px 8px rgba(0,0,0,0.15);
            font-size: 13px;
            z-index: 1000;
        }

        .legend-title {
            font-weight: bold;
            margin-bottom: 8px;
            font-size: 14px;
        }

        .legend-item {
            display: flex;
            align-items: center;
            gap: 8px;
            margin: 6px 0;
        }

        .legend-color {
            width: 20px;
            height: 20px;
            border-radius: 3px;
            border: 1px solid #999;
        }
    </style>
</head>
<body>
    <div id="controls">
        <button onclick="fitGraph()">Fit to Screen</button>
        <button onclick="resetZoom()">Reset Zoom</button>
        <button onclick="centerGraph()">Center</button>
        <button onclick="exportPNG()">Export as PNG</button>
        <div id="info"></div>
    </div>

    <div id="cy"></div>

    <div class="legend">
        <div class="legend-title">Legend</div>
        <div class="legend-item">
            <div class="legend-color" style="background: #90caf9; border-radius: 50%;"></div>
            <span>Module</span>
        </div>
        <div class="legend-item">
            <div class="legend-color" style="background: #a5d6a7;"></div>
            <span>Script</span>
        </div>
        <div class="legend-item">
            <div class="legend-color" style="background: #ffcc80; clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);"></div>
            <span>Namespace Package</span>
        </div>
        <div class="legend-item">
            <div class="legend-color" style="background: #bbdefb; border: 2px solid #1976d2;"></div>
            <span>Highlighted</span>
        </div>
    </div>

    <script>
        // Initialize Cytoscape
        const cy = cytoscape({
            container: document.getElementById('cy'),

            elements: [
    { "data": { "id": "main", "label": "main", "type": "module"  } },
    { "data": { "id": "pkg_a", "label": "pkg_a", "type": "module"  } },
    { "data": { "id": "pkg_a.module_a", "label": "pkg_a.module_a", "type": "module"  } },
    { "data": { "id": "pkg_b", "label": "pkg_b", "type": "module"  } },
    { "data": { "id": "pkg_b.module_b", "label": "pkg_b.module_b", "type": "module"  } },
    { "data": { "source": "main", "target": "pkg_a" } },
    { "data": { "source": "main", "target": "pkg_b.module_b" } },
    { "data": { "source": "pkg_a.module_a", "target": "pkg_b" } }
            ],

            style: [
                {
                    selector: 'node',
                    style: {
                        'label': 'data(label)',
                        'text-valign': 'center',
                        'text-halign': 'center',
                        'font-size': '12px',
                        'background-color': '#90caf9',
                        'border-width': 1,
                        'border-color': '#1976d2',
                        'width': 'label',
                        'height': 'label',
                        'padding': '10px',
                        'shape': 'ellipse',
                        'text-wrap': 'wrap',
                        'text-max-width': '150px'
                    }
                },
                {
                    selector: 'node[type="script"]',
                    style: {
                        'shape': 'rectangle',
                        'background-color': '#a5d6a7',
                        'border-color': '#388e3c'
                    }
                },
                {
                    selector: 'node[type="namespace"]',
                    style: {
                        'shape': 'hexagon',
                        'background-color': '#ffcc80',
                        'border-color': '#f57c00',
                        'border-style': 'dashed'
                    }
                },
                {
                    selector: 'node[highlighted]',
                    style: {
                        'background-color': '#bbdefb',
                        'border-width': 2,
                        'border-color': '#1976d2'
                    }
                },
                {
                    selector: 'edge',
                    style: {
                        'width': 2,
                        'line-color': '#999',
                        'target-arrow-color': '#999',
                        'target-arrow-shape': 'triangle',
                        'curve-style': 'bezier',
                        'arrow-scale': 1.2
                    }
                }
            ],

            layout: {
                name: 'dagre',
                rankDir: 'LR',
                nodeSep: 50,
                rankSep: 100,
                padding: 30
            }
        });

        // Update info on selection
        cy.on('select', 'node', function(evt) {
            const node = evt.target;
            const info = document.getElementById('info');
            info.textContent = `Selected: ${node.data('label')}`;
        });

        cy.on('unselect', 'node', function() {
            const info = document.getElementById('info');
            info.textContent = '';
        });

        // Control functions
        function fitGraph() {
            cy.fit(undefined, 50);
        }

        function resetZoom() {
            cy.zoom(1);
            cy.center();
        }

        function centerGraph() {
            cy.center();
        }

        function exportPNG() {
            const png = cy.png({ full: true, scale: 2 });
            const link = document.createElement('a');
            link.download = 'dependency-graph.png';
            link.href = png;
            link.click();
        }

        // Initial fit
        setTimeout(() => {
            cy.fit(undefined, 50);
        }, 100);
    </script>
</body>
</html>
