tests/snapshots/python_test__sample_python_project_mermaid_output.snap
---
source: tests/python_test.rs
expression: mermaid_output
---
flowchart TD
    main("main") --> pkg_a("pkg_a")
    main("main") --> pkg_b_module_b("pkg_b.module_b")
    pkg_a_module_a("pkg_a.module_a") --> pkg_b("pkg_b")
