tests/snapshots/python_test__skip_unparseable_files.snap
---
source: tests/python_test.rs
expression: dot_output
---
digraph dependencies {
    rankdir=LR;
    "another_valid";
    "valid_module";
    "another_valid" -> "valid_module";
}
