tests/snapshots/python_test__src_layout_auto_detection.snap
---
source: tests/python_test.rs
expression: dot_output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "main";
    "pkg_a";
    "pkg_a.module_a";
    "pkg_b";
    "pkg_b.module_b";
    "main" -> "pkg_a";
    "main" -> "pkg_b.module_b";
    "pkg_a.module_a" -> "pkg_b";
}
