tests/snapshots/python_test__upstream_script_with_relative_imports.snap
---
source: tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "foo.bar";
    "scripts.runner" [shape=box];
    "scripts.utils.helper" [shape=box];
    "scripts.runner" -> "foo.bar";
    "scripts.runner" -> "scripts.utils.helper";
}
