tests/snapshots/python_test__upstream_transitive_deps_mermaid.snap
---
source: tests/python_test.rs
expression: output
---
flowchart TD
    main("main") --> pkg_a("pkg_a")
    main("main") --> pkg_b_module_b("pkg_b.module_b")
